--- a/_data/conference.yml
+++ b/_data/conference.yml
@@ -101,6 +101,7 @@ feature:
     subtitle: The city
     title: Lausanne, Switzerland
     description: Workshops and other co-located events will take place the week of the conference, starting on August 18. Why not seize the opportunity and stay a full week in Lausanne to get the most out of your trip? And maybe even enjoy some extra time sightseeing and relaxing by Lake Geneva (Lac Léman), overlooked by the magnificent Alps?
+    href: /sightseeing
 
   - image: img/assets/madrid/feature-madrid-02.jpg
     subtitle: EPFL
@@ -211,13 +212,12 @@ subscribe-title: Join our conference
 subscribe-subtitle: Subscribe
 subscribe-description: Subscribe and follow <a href="https://bsky.app/profile/scaladays.org" target="_blank" rel="noopener noreferrer">@ScalaDays</a> on BlueSky for the latest conference updates.
 
-# The venue
+# Sightseeing
 # ----------------------------------------------------------------------------------------------------------
 # ----------------------------------------------------------------------------------------------------------
-
-the-venue:
+sightseeing:
   - icon: img/assets/icon-about-location.svg
-    title: Location
+    title: Post-conference site-seeing
     description: Scala Days Madrid is located around the Chamartín train station, in the northern part of Madrid's city center. The address is Calle de Agustín de Foxá, 40, 28036 Madrid.
   - icon: img/assets/icon-airport.svg
     title: The Airport
@@ -226,14 +226,39 @@ the-venue:
     title: The city
     description: While in the city, explore more of Madrid! Madrid is the home to the oldest operating restaurant, some of the world's best museums, and is one of the world's greenest cities with expansive, green parks.
 
+sightseeing-hero-description: While in the city, explore more of Lausanne!
+sightseeing-hero-cta: Learn more 
+
+sightseeing-title: Explore Lausanne!
+sightseeing-subtitle: Wine tasting
+sightseeing-description: Lausanne Tourisme is here to organise a fantastic wine tasting tour in the UNESCO World Heritage site of Lavaux near Lausanne, Friday 22nd August. This tour costs 55 CHF per person, and includes train ticket, guided tour, visit of a local winery with wine tasting.
+sightseeing-cta: Register now
+sightseeing-url: https://www.notareallink.ch/
+the-venue-image: img/assets/madrid/the-venue-madrid.jpg
+
+# The venue
+# -----------------------------------------------------------------------------------------------------------
+# ----------------------------------------------------------------------------------------------------------
+
+the-venue:
+  - icon: img/assets/icon-about-location.svg
+    title: Location
+    description: Scala Days Lausanne is located at the SwissTech Convention Center (STCC), situated on the EPFL campus in the western part of Lausanne. The address is Route Louis-Favre 2, 1024 Ecublens.
+  - icon: img/assets/icon-airport.svg
+    title: The Airport
+    description: Geneva Airport (GVA), also known as Genève-Cointrin Airport, is Switzerland’s second-busiest airport behind Zurich. GVA offers two passenger terminals and is located approximately 4 kilometers from Geneva’s city center and around 60 kilometers from Lausanne.
+  - icon: img/assets/icon-city.svg
+    title: The city
+    description: While in the city, explore more of Lausanne! Lausanne is home to the Olympic Museum, offers stunning views of Lake Geneva, and is known for its vibrant cultural scene and beautiful parks, making it one of Switzerland's most picturesque cities.
+
 the-venue-hero-description: The conference is organised by the Scala Center at the SwissTech Convention Center, in the heart of campus at EPFL (École Polytechnique Fédérale de Lausanne).
 the-venue-hero-cta: Learn more about the Venue
 
 the-venue-title: An awesome venue
-the-venue-subtitle: MEUU
-the-venue-description: MEEU is located at the Chamartín train station with state-of-the-art infrastructure and technology at the center of the Spanish capital's financial district. Its convenient location allows fast transportation to easily get anywhere in Madrid or the rest of Spain. The MEEU space is versatile and functional, with large outdoor areas. Along with its convenient location, MEEU is surrounded by great restaurants and hotels. You can find MEEU at Calle de Agustín de Foxá, 40, 28036 Madrid.
+the-venue-subtitle: Swissteck Convention Center
+the-venue-description: The SwissTech Convention Center (STCC) is located on the EPFL campus, featuring state-of-the-art infrastructure and technology at the heart of the Lake Geneva region's innovation hub. Its strategic location provides excellent connectivity, with easy access to Lausanne’s city center and nearby cities like Geneva. The STCC offers a versatile and functional space with modern facilities designed to accommodate a wide range of events. Along with its convenient location, the area surrounding the STCC features various restaurants, hotels, and leisure options. You can find the STCC at Route Louis-Favre 2, 1024 Ecublens.
 the-venue-cta: Visit the website
-the-venue-url: https://www.meeu.es/
+the-venue-url: https://www.stcc.ch/
 the-venue-image: img/assets/madrid/the-venue-madrid.jpg
 
 
