--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -12,6 +12,7 @@
   - title: Sponsors
     url: "/#sponsors"
     nav: nav
+    wip: true
 
   - title: Venue
     url: /the-venue
@@ -25,7 +26,7 @@
 
   - title: Tickets
     title-large: Buy tickets now
-    url: "/#pricetable"
+    url: /tickets
     id: tickets
     nav: nav
     section: hero
