chore: rewrite airport section to follow yaml syntax

--- a/_data/conference.yml
+++ b/_data/conference.yml
@@ -223,7 +223,7 @@ the-venue:
     description: Scala Days Lausanne is located at the SwissTech Convention Center (STCC), situated on the EPFL campus in the western part of Lausanne. The address is Route Louis-Favre 2, 1024 Ecublens.
   - icon: img/assets/icon-airport.svg
     title: The Airport
-    description: Switzerland is served by three major international airports: Zurich Airport (ZRH), Geneva Airport (GVA), and Basel-Mulhouse Airport (BSL/MLH/EAP). Zurich Airport, the country’s busiest and a major European hub, is located about 13 kilometers from Zurich’s city center and approximately 230 kilometers northeast of Lausanne. Geneva Airport, also known as Genève-Cointrin Airport, is Switzerland’s second-busiest airport, situated just 4 kilometers from Geneva’s city center and around 60 kilometers southwest of Lausanne. Basel-Mulhouse Airport, uniquely positioned near the borders of Switzerland, France, and Germany, lies about 6 kilometers from Basel and roughly 200 kilometers northwest of Lausanne, making it a viable option for travelers in the region.
+    description: Geneva Airport (GVA), also known as Genève-Cointrin Airport, is Switzerland’s second-busiest airport behind Zurich. GVA offers two passenger terminals and is located approximately 4 kilometers from Geneva’s city center and around 60 kilometers from Lausanne.
   - icon: img/assets/icon-city.svg
     title: The city
     description: While in the city, explore more of Lausanne! Lausanne is home to the Olympic Museum, offers stunning views of Lake Geneva, and is known for its vibrant cultural scene and beautiful parks, making it one of Switzerland's most picturesque cities.
