--- a/_data/conference.yml
+++ b/_data/conference.yml
@@ -97,13 +97,13 @@ feature:
     subtitle: The city
     title: Lausanne, Switzerland
     description: Workshops and other co-located events will take place the week of the conference, starting on August 18. Why not seize the opportunity and stay a full week in Lausanne to get the most out of your trip? And maybe even enjoy some extra time sightseeing and relaxing by Lake Geneva (Lac Léman), overlooked by the magnificent Alps?
-    href: /sightseeing
+    href: /lausanne
 
   - image: img/assets/madrid/feature-lausanne-02.jpg
     subtitle: EPFL
     title: Venue
     description: Scala Days will be taking place in Scala’s sunny hometown of Lausanne, Switzerland, August 19-21, 2025. The conference is organised by the Scala Center at the SwissTech Convention Center, in the heart of campus at EPFL (École Polytechnique Fédérale de Lausanne).
-    href: /the-venue
+    href: /venue
 
   - image: img/assets/madrid/feature-lausanne-03.png
     subtitle: Courses
