--- a/_data/conference.yml
+++ b/_data/conference.yml
@@ -97,7 +97,7 @@ feature:
     subtitle: The city
     title: Lausanne, Switzerland
     description: Workshops and other co-located events will take place the week of the conference, starting on August 18. Why not seize the opportunity and stay a full week in Lausanne to get the most out of your trip? And maybe even enjoy some extra time sightseeing and relaxing by Lake Geneva (Lac Léman), overlooked by the magnificent Alps?
-    href: /lausanne
+    href: /the-venue
 
   - image: img/assets/madrid/feature-lausanne-02.jpg
     subtitle: EPFL
