--- a/_data/conference.yml
+++ b/_data/conference.yml
@@ -196,20 +196,20 @@ subscribe-description: Subscribe and follow <a href="https://bsky.app/profile/sc
 the-venue:
   - icon: img/assets/icon-about-location.svg
     title: Location
-    description: Scala Days Lausanne is located at the SwissTech Convention Center (STCC), situated on the EPFL campus in the western part of Lausanne. The address is Route Louis-Favre 2, 1024 Ecublens.
+    description: STCC is situated on the EPFL campus in the western part of Lausanne. <br><br> With a large focus on sustainability, the STCC facilities are energy efficient with 100% of their energy coming from renewable sources, such as using water from Lake Geneva to cool the building, primarily using natural light, and making the windowpanes act as solar panels. Be prepared to be floored by a state-of-the-art experience as you connect in rooms specifically tailored to fit the needs of Scala Days attendees. 
   - icon: img/assets/icon-airport.svg
     title: The Airport
-    description: Geneva Airport (GVA), also known as Genève-Cointrin Airport, is Switzerland’s second-busiest airport behind Zurich. GVA offers two passenger terminals and is located approximately 4 kilometers from Geneva’s city center and around 60 kilometers from Lausanne.
+    description: Geneva Airport (GVA), also known as Genève-Cointrin Airport, is Switzerland’s second-busiest airport behind Zurich. GVA is located approximately 60 km from Lausanne and is connected to the city by both road and train. <br><br> While planning your travel, GVA isn't your only option! Lausanne may also be reached from Switzerland's other international airports such as Basel, Zurich, and Bern-Belp. Trains from major European cities such as Paris, Lyon, Frankfurt, Brussels, and Milan also arrive in Lausanne's train station on a regular basis. <br><br> Find more travel and access information on the <a href="https://www.lausanne-tourisme.ch/en/access-to-lausanne/">Lausanne Tourism website</a>. 
   - icon: img/assets/icon-city.svg
     title: The city
-    description: While in the city, explore more of Lausanne! Lausanne is home to the Olympic Museum, offers stunning views of Lake Geneva, and is known for its vibrant cultural scene and beautiful parks, making it one of Switzerland's most picturesque cities.
+    description: While in the city, explore more of Lausanne! Lausanne is home to the Olympic Museum, offers stunning views of Lake Geneva, and is known for its vibrant cultural scene and beautiful parks, making it one of Switzerland's most picturesque cities. Lausanne was also named the best small town in the world in the first "Small Cities Index." <br><br> The city is strategically located in the heart of Europe within Switzerland's French-speaking region, it is easily navigated with public transport, and combines all of the benefits of a large, urban center with the relaxed pace of a small town. What's more exciting, all hotel guests are offered a Lausanne transport card. This card provides free access to public transportation as well as discounts and free admission with selected partners.
 
 the-venue-hero-description: The conference is organised by the Scala Center at the SwissTech Convention Center, in the heart of campus at EPFL (École Polytechnique Fédérale de Lausanne).
 the-venue-hero-cta: Learn more about the Venue
 
 the-venue-title: An awesome venue
-the-venue-subtitle: Swisstech Convention Center
-the-venue-description: The SwissTech Convention Center (STCC) is located on the EPFL campus, featuring state-of-the-art infrastructure and technology at the heart of the Lake Geneva region's innovation hub. Its strategic location provides excellent connectivity, with easy access to Lausanne’s city center and nearby cities like Geneva. The STCC offers a versatile and functional space with modern facilities designed to accommodate a wide range of events. Along with its convenient location, the area surrounding the STCC features various restaurants, hotels, and leisure options. You can find the STCC at Route Louis-Favre 2, 1024 Ecublens.
+the-venue-subtitle: SwissTech Convention Center
+the-venue-description: The SwissTech Convention Center (STCC) is located on the EPFL campus, featuring state-of-the-art infrastructure and technology at the heart of the Lake Geneva region's innovation hub. Its strategic location provides excellent connectivity, with easy access to Lausanne’s city center and nearby cities like Geneva. The STCC offers a versatile and functional space with modern facilities designed to accommodate a wide range of events. Along with its convenient location, the area surrounding the STCC features various restaurants, hotels, and leisure options. <br><br> You can find the STCC at Route Louis-Favre 2, 1024 Ecublens.
 the-venue-cta: Visit the website
 the-venue-url: https://www.stcc.ch/
 the-venue-image: img/assets/the-venue-lausanne.jpg
