chore: add workshops to navbar

--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -11,6 +11,11 @@
     nav: nav
     wip: false
 
+  - title: Workshops
+    url: /workshops
+    nav: nav
+    wip: false
+
   - title: Venue
     url: /the-venue
     nav: nav
