--- a/_data/workshops.yml
+++ b/_data/workshops.yml
@@ -10,7 +10,7 @@ noel:
   name: "Noel Welsh"
   position: Inner Product
   about: "I'm a Scala consultant at Inner Product and Underscore. I like helping teams succeed with Scala, and creating libraries in Scala that allow people to get stuff done with a minimum of effort. I've written a few books on Scala: Scala with Cats, Essential Scala, and Creative Scala."
-  image: img/assets/madrid/speakers/NoelWelshSq.png
+  image: /img/assets/madrid/speakers/NoelWelshSq.png
   linkedin: "https://www.linkedin.com/in/noel-welsh-a71658/"
   github: "https://github.com/noelwelsh/"
 
@@ -21,7 +21,7 @@ daniel:
     I've taught more than 80000 developers so far, and trained high-performing teams at some of the most renowned companies in the world (e.g. Adobe, Apple, Microsoft, ING and others).
     I've also taught more than 30000 kids to code (not Scala… yet).
     I have a Master's Degree in Computer Science and I wrote my Bachelor and Master theses on Quantum Computation. Before starting to learn programming, I won medals at international Physics competitions."
-  image: /img/assets/madrid/speakers/DanielCiocirlanSq.png
+  image: /img/assets/workshops/DanielCiocirlan.png
   linkedin: "http://linkedin.com/company/rockthejvm"
   github: "https://github.com/rockthejvm"
 
@@ -29,6 +29,6 @@ david:
   name: "David Amancio Gil Méndez"
   position: Xebia
   about: "I am a passionate advocate of simple, vanilla Scala and I study and teach it in my free time. As a Data Engineer, I have been building Streaming and Batch systems for 5 years. Before joining the Data world, I used to work as a market analyst in Spain and as an international trade advisor in Canada."
-  image: /img/assets/madrid/speakers/DavidAmancioGilMendezSq.png
+  image: /img/assets/workshops/DavidGil.jpg
   linkedin: "https://www.linkedin.com/in/davidgilmendez"
   github: "https://github.com/dagmendez"
