--- a/_data/workshops.yml
+++ b/_data/workshops.yml
@@ -10,7 +10,7 @@ noel:
   name: "Noel Welsh"
   position: Inner Product
   about: "I'm a Scala consultant at Inner Product and Underscore. I like helping teams succeed with Scala, and creating libraries in Scala that allow people to get stuff done with a minimum of effort. I've written a few books on Scala: Scala with Cats, Essential Scala, and Creative Scala."
-  image: /img/assets/madrid/speakers/NoelWelshSq.png
+  image: /img/assets/workshops/NoelWelsh.jpg
   linkedin: "https://www.linkedin.com/in/noel-welsh-a71658/"
   github: "https://github.com/noelwelsh/"
 
