--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -39,6 +39,6 @@ workshops:
   - title: Domain Driven Design in Scala 3
     url: /workshop/4/
     
-  - title: TBD
+  - title: Scala, Productivity, and AI
     url: /workshop/5/
 
