--- a/_data/pricetable.yml
+++ b/_data/pricetable.yml
@@ -8,7 +8,7 @@ pricetable-subtitle-workshops: Pricetable
 pricetable-title-workshops: Workshops
 pricetable-description-workshops: |
   {: .lead}
-  All workshops are **2-day (16 hour)** courses and will be offered on August 18 and 19. Each workshop will conclude before the opening keynote on Auguat 19th. All workshops require a minimum of 9 participants to run. <br><br> 
+  All workshops are <b>2-day</b> courses and will be offered on August 18 and 19. Each workshop will conclude before the opening keynote on Auguat 19th. All workshops require a minimum of 9 participants to run. <br><br> 
   <b>All workshop attendees will receive a certificate of completion following the end of the conference.</b> <br><br>
   <table>
   <tbody>
